@@ -1,14 +1,7 @@
-FROM gradle:7.5.1-jdk17-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
-
-FROM openjdk:17-jre-slim
+FROM openjdk:20-ea-17-jdk-slim
 
 EXPOSE 8080
+# 파일을 빌드한다
+COPY build/libs/*.jar app.jar
 
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT [ "java", "-jar", "/app.jar" ]
